@@ -1,3 +1,4 @@
 Victor Fernandez de Alba [sneridagh], Author
 Sebastian Jordan [seppeljordan]
 Leonardo J. Caballero G. [macagua]
+Laurent Lasudry [laulaz]
